[metadata]
name = bmi
version = 0.0.1
platform = any
url = https://github.com/pawel-czyz/mi
description = Benchmarking Mutual Information estimators
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python requires = >= 3.9
install_requires =
    numpy
    pydantic

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    pytest-cov

[pytype]
inputs =
    src
    tests

[isort]
line_length = 99
src_paths = 
    src
    tests
    scripts

