[metadata]
name = bmi
version = 0.0.1
platform = any
url = https://github.com/pawel-czyz/mi
description = Benchmarking Mutual Information estimators
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python requires = >= 3.9
install_requires =
    equinox
    jax
    jaxlib
    numpy
    optax
    pandas
    pydantic
    pyyaml
    scipy
    scikit-learn

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-xdist
mine =
    latte @ git+https://github.com/pawel-czyz/mine-mist.git

[isort]
line_length = 99
src_paths = 
    src
    tests
    scripts

