[metadata]
name = bmi
version = 0.0.1
platform = any
url = https://github.com/pawel-czyz/bmi
description = Benchmarking Mutual Information estimators
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python requires = >= 3.9
install_requires =
    equinox
    jax
    jaxlib
    numpy
    pandas
    pydantic
    pyyaml
    scipy
    scikit-learn

[options.packages.find]
where=src

[options.extras_require]
# Unit testing utilities
test =
    pytest
    pytest-cov
    pytest-xdist
# MINE dependency. This is temporary (until we have our own JAX version)
mine =
    latte @ git+https://github.com/pawel-czyz/mine-mist.git
# The additional dependencies, which are not a part of the package,
# but are necessary to run the experiments.
experiments =
    matplotlib

[isort]
line_length = 99
src_paths = 
    src
    tests
    scripts

